prac/k8s_prac/4_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apache
  namespace: apache-prod
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: apache
  template:
    metadata:
      labels:
        app: apache
    spec:
      containers:
        - name: apache
          image: httpd:2.4.66
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          startupProbe:
            httpGet:
              path: /healthz.html
              port: http
            periodSeconds: 5
            failureThreshold: 30
          readinessProbe:
            httpGet:
              path: /healthz.html
              port: http
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /healthz.html
              port: http
            periodSeconds: 20
            timeoutSeconds: 3
          volumeMounts:
            - name: apache-storage
              mountPath: /usr/local/apache2/htdocs
      volumes:
        - name: web-content
          configMap:
            name: apache-web-content
        - name: apache-storage
          persistentVolumeClaim:
            claimName: apache-pvc
