prac/k8s_prac/5_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-service
  namespace: apache-prod
spec:
  type: ClusterIP
  selector:
    app: apache
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
